ncc/testsuite/negative/no-this.n
class Bar { public xx : int; public this () {} }

class Foo : Bar {
  static xs : int;      // OK
  ms () : int { xs }    // OK
  
  xi : int;                     // OK
  mi () : int { xi + ms () }    // OK
  mi2 () : int { mi () + ms () }// OK

  static ms2 () : int { xi }            // E: referencing an instance member `xi' from within a static method
  static ms3 () : int { mi () }         // E: referencing an instance member `mi' from within a static method

  static new xx : int;                      // OK
  yy () : int { xx }                        // OK
  // was `ambiguity between `this.xx' and a static field `Foo.xx'`
}
